# Instruction_Roofline_Analysis

./: .gitignore  CMakeLists.txt  README.md  build.sh  experience.sh  experiment.sh  run.txt
Roofline/: all_metric_names.txt  all_metrics.txt  draw_Roofline.py  draw_Roofline_4.py  matrices.txt  mem_peaks.csv  metrics_cc89.list
Roofline/result/20250819_164903/: manifest.tsv
Roofline/result/20250819_164903/cusparse/: ncu_cusparse_bottleneck_1_block_group_projection_block_group4.smtx.csv
Roofline/result/20250819_165355/: manifest.tsv
Roofline/result/20250819_165355/cusparse/: ncu_cusparse_001_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_002_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_003_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_004_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_005_bottleneck_1_block_group_projection_block_group2.smtx.csv  ncu_cusparse_006_bottleneck_1_block_group_projection_block_group2.smtx.csv
Roofline/result/20250819_203503/: manifest.tsv
Roofline/result/20250819_203503/cusparse/: ncu_cusparse_001_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_002_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_003_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_004_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_005_bottleneck_1_block_group_projection_block_group2.smtx.csv  ncu_cusparse_006_bottleneck_1_block_group_projection_block_group2.smtx.csv
Roofline/result/20250819_215031/: manifest.tsv
Roofline/result/20250819_215031/cusparse/: ncu_cusparse_001_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_002_bottleneck_1_block_group_projection_block_group4.smtx.csv  ncu_cusparse_003_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_004_bottleneck_1_block_group_projection_block_group3.smtx.csv  ncu_cusparse_005_bottleneck_1_block_group_projection_block_group2.smtx.csv  ncu_cusparse_006_bottleneck_1_block_group_projection_block_group2.smtx.csv
include/: nvtx_helper.cuh  spmm_logger.cuh  utility.cuh
profile/: ncu_cusparse_bottleneck_1_block_group_projection_block_group2.csv  ncu_cusparse_bottleneck_1_block_group_projection_block_group3.csv  ncu_cusparse_bottleneck_1_block_group_projection_block_group4.csv  ncu_ginkgo_bottleneck_1_block_group_projection_block_group2.csv  ncu_ginkgo_bottleneck_1_block_group_projection_block_group3.csv  ncu_ginkgo_bottleneck_1_block_group_projection_block_group4.csv  time_cusparse_bottleneck_1_block_group_projection_block_group2.txt  time_cusparse_bottleneck_1_block_group_projection_block_group3.txt  time_cusparse_bottleneck_1_block_group_projection_block_group4.txt  time_ginkgo_bottleneck_1_block_group_projection_block_group2.txt  time_ginkgo_bottleneck_1_block_group_projection_block_group3.txt  time_ginkgo_bottleneck_1_block_group_projection_block_group4.txt
results/ICTC_TEST_RESULT_20250814_131451/: ICTC_spmm_compare_20250814_131451.csv  error_cases.csv
results/ICTC_TEST_RESULT_20250814_182320/: ICTC_spmm_compare_20250814_182320.csv
results/ICTC_TEST_RESULT_20250814_212018/: ICTC_spmm_compare_20250814_212018.csv
results/ICTC_TEST_RESULT_20250814_212648/: ICTC_spmm_compare_20250814_212648.csv
src/: Ginkgo_main.cu  NCU_Ginkgo_main.cu  NCU_cuSPARSE_main.cu  Time_Ginkgo_main.cu  Time_cuSPARSE_main.cu  cuSPARSE_main.cu  spmm_logger.cu
